argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
    annotations:
      kubernetes.io/ingress.class: "nginx"
      alb.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
 rules:
 - host: cid.cessmedia.com
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: argocd-server
           port:
             number: 443
